@@ -1,3 +1,7 @@
+2022-11-05  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
+
 2022-02-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* NAMESPACE: Add panel.superpose to lattice imports
